# goskateapiparser

./: Cargo.toml  README.md  dockerfile  estimate.yaml  makefile
.github/: FUNDING.yml
.github/workflows/: rust-core.yaml
src/: items.rs  main.rs  parser.rs
src/data/: tradexport_1755362248.csv
