[package]
name = "goskateapiparser"
version = "0.1.0"
edition = "2024"
license = "GNU General Public License v3.0"
repository = "https://github.com/Zephira58/goskateapiparser"
authors = ["Zephria58 <zephira58@protonmail.com>"]

readme = "README.md"
description = "A small api for a roblox game called go skate which can be found at: https://www.roblox.com/games/124027312895188/go-skate"
publish = false

[dependencies]
csv = "1.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.11.1"
serde = { version = "1.0.227", features = ["derive"] }
serde_yaml = "0.9.33"

[profile.release]
# See info here https://www.youtube.com/watch?v=b2qe3L4BX-Y
strip = true
opt-level = "s"
lto = true
codegen-units = 1